# sofars

./: CHANGELOG.md  Cargo.toml  LICENSE  README-zh.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yaml  release-plz.yml  release-pr.yaml
benches/: astro.rs  calendars.rs  coord.rs  eph.rs  erst.rs  fundargs.rs  pnp.rs  projection.rs  star.rs  ts.rs
examples/: astrometry_comprehensive.rs
src/: consts.rs  eph.rs  fundargs.rs  gnomic.rs  horeq.rs  lib.rs  star.rs  vm.rs
src/astro/: ab.rs  apcg.rs  apcg13.rs  apci.rs  apci13.rs  apco.rs  apco13.rs  apcs.rs  apcs13.rs  aper.rs  aper13.rs  apio.rs  apio13.rs  astro.rs  atcc13.rs  atccq.rs  atci13.rs  atciq.rs  atciqn.rs  atciqz.rs  atco13.rs  atic13.rs  aticq.rs  aticqn.rs  atio13.rs  atioq.rs  atoc13.rs  atoi13.rs  atoiq.rs  ld.rs  ldn.rs  ldsun.rs  mod.rs  pmpx.rs  pmsafe.rs  pvstar.rs  pvtob.rs  refco.rs  starpm.rs  starpv.rs
src/cal/: cal2jd.rs  epb.rs  epb2jd.rs  epj.rs  epj2jd.rs  jd2cal.rs  jdcalf.rs  mod.rs
src/coords/: ae2hd.rs  coords.rs  eceq06.rs  ecm06.rs  eform.rs  eqec06.rs  g2icrs.rs  gc2gd.rs  gc2gde.rs  gd2gc.rs  gd2gce.rs  hd2ae.rs  hd2pa.rs  icrs2g.rs  lteceq.rs  ltecm.rs  lteqec.rs  mod.rs
src/eph/: epv00.rs  mod.rs  moon98.rs  plan94.rs
src/erst/: ee00.rs  ee00a.rs  ee00b.rs  ee06a.rs  eect00.rs  eqeq94.rs  era00.rs  erst.rs  gmst00.rs  gmst06.rs  gmst82.rs  gst00a.rs  gst00b.rs  gst06.rs  gst06a.rs  gst94.rs  (+1 more)
tests/: astro_test.rs  calendars_test.rs  coord_test.rs  eph_test.rs  erst_test.rs  fundargs_test.rs  pnp_test.rs  projection_test.rs  star_test.rs  ts_test.rs  vm_test.rs
(+160 files in other folders)
