[package]
name = "sofars"
license = "MIT"
repository = "https://github.com/astro-xao/sofars"
version = "0.6.0"
edition = "2024"
description = "Pure Rust implementation of the IAU SOFA library"
authors = ["Huxulm <huxulm@gmail.com>"]
documentation = "https://docs.rs/sofars"
keywords = ["astronomy", "iau", "sofa"]
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "astro"
harness = false

[[bench]]
name = "calendars"
harness = false

[[bench]]
name = "coord"
harness = false

[[bench]]
name = "eph"
harness = false

[[bench]]
name = "erst"
harness = false

[[bench]]
name = "fundargs"
harness = false

[[bench]]
name = "pnp"
harness = false

[[bench]]
name = "projection"
harness = false

[[bench]]
name = "star"
harness = false

[[bench]]
name = "ts"
harness = false